# ssh-mcp

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  WINDSURF.md  windsurf-setup.sh
.github/workflows/: ci-cd.yml  docker.yml
examples/: connect_example.rs  simple_mcp.rs
src/: main.rs
src/mcp/: commands.rs  mod.rs  server.rs  ssh_commands.rs  tools.rs
