[package]
name = "ssh-mcp"
version = "0.1.0"
edition = "2024"
description = "SSH Model Context Protocol Server Integration"
authors = ["mingyang91 <mingyang91@qq.com>"]
default-run = "ssh-mcp"
license = "MIT"

[[bin]]
name = "ssh-mcp-stdio"
path = "src/bin/ssh_mcp_stdio.rs"

[[bin]]
name = "ssh-mcp"
path = "src/main.rs"

[lib]
name = "ssh_mcp"
path = "src/lib.rs"

# Dependencies for SSH features and stateful connections
[dependencies]
# Web and MCP
poem = "=3.1.10"                                                            # Match version used by poem-mcpserver
poem-mcpserver = { version = "0.2.3", features = ["streamable-http"] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }

# SSH client
ssh2 = "0.9" # For SSH functionality

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"                                   # Required by poem-mcpserver

# Utilities
dotenv = "0.15"                                         # For environment variables
thiserror = "1.0"                                       # Error handling
tracing = "0.1"                                         # Tracing for debugging
tracing-subscriber = "0.3"                              # Tracing implementation
uuid = { version = "1.16", features = ["v4", "serde"] } # For unique identifiers
async-trait = "0.1"                                     # For async trait support
once_cell = "1.21"                                      # For lazy static initialization

[features]
# Default features
default = ["port_forward"]

# Optional features
port_forward = [] # Port forwarding support
